--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,84 +1,68 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chatbot</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}"/>
-    </head>
-   
-   
-    <body>
-        <div class="container-fluid h-100">
-            <div class="row justify-content-center h-100">      
-                <div class="col-md-8 col-xl-6 chat">
-                    <div class="card">
-                        <div class="card-header msg_head">
-                            <div class="d-flex bd-highlight">
-                                <div class="img_cont">
-                                    <!-- <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img"> -->
-                                    <img src="https://as1.ftcdn.net/v2/jpg/03/62/38/40/1000_F_362384033_CmB8s3flVvKKbwPjzzOnWMD06JyhkTln.jpg" class="rounded-circle user_img">
-                                    <span class="online_icon"></span>
-                                </div>
-                                <div class="user_info">
-                                    <span>Organic Chemistry Chatbot</span>
-                                    <p>Ask me anything!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="messageFormeight" class="card-body msg_card_body">
-                           
-                           
-                        </div>
-                        <div class="card-footer">
-                            <form id="messageArea" class="input-group">
-                                <input type="text" id="text" name="msg" placeholder="Type your message..." autocomplete="off" class="form-control type_msg" required/>
-                                <div class="input-group-append">
-                                    <button type="submit" id="send" class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<head>
+    <title>Chatbot</title>
+    <!-- Link to the local CSS file -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}" />
+</head>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="header-title">Chat with Your File</div>
+            <div class="status">Online</div>
         </div>
-       
-        <script>
-            $(document).ready(function() {
-                $("#messageArea").on("submit", function(event) {
-                    const date = new Date();
-                    const hour = date.getHours();
-                    const minute = date.getMinutes();
-                    const str_time = hour+":"+minute;
-                    var rawText = $("#text").val();
+        <div class="card">
+            <div class="icon">
+                <!-- Replace with a local image if needed -->
+                <img src="https://riaayupramudita.id/wp-content/uploads/2024/08/chatbot_image.jpeg" alt="User Avatar">
+            </div>
+            <div class="title">File Chatbot</div>
+            <div class="subtitle">Ask me anything!</div>
+        </div>
 
+        <div id="messageFormeight" class="card">
+            <!-- Messages will be appended here -->
+        </div>
 
-                    var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://as1.ftcdn.net/v2/jpg/06/67/75/46/1000_F_667754603_osmKogAmBysSW103NiMxqVBACiNbniXC.jpg" class="rounded-circle user_img_msg"></div></div>';
-                   
-                    $("#text").val("");
-                    $("#messageFormeight").append(userHtml);
+        <div class="footer">
+            <form id="messageArea" class="footer-button">
+                <input type="text" id="text" name="msg" class="message-box" placeholder="Type your message..." autocomplete="off" required />
+            </form>
+            <button type="submit" id="send" class="footer-button">
+                <img src="https://img.icons8.com/ios-filled/50/ffffff/paper-plane.png" alt="Send">
+            </button>
+        </div>
+    </div>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("messageArea").addEventListener("submit", function(event) {
+                const date = new Date();
+                const hour = date.getHours();
+                const minute = date.getMinutes();
+                const str_time = hour + ":" + minute;
+                var rawText = document.getElementById("text").value;
 
-                    $.ajax({
-                        data: {
-                            msg: rawText,  
-                        },
-                        type: "POST",
-                        url: "/get",
-                    }).done(function(data) {
-                        var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://as1.ftcdn.net/v2/jpg/03/62/38/40/1000_F_362384033_CmB8s3flVvKKbwPjzzOnWMD06JyhkTln.jpg" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
-                        $("#messageFormeight").append($.parseHTML(botHtml));
-                    });
-                    event.preventDefault();
-                });
+                var userHtml = '<div class="card"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">' + str_time + '</span></div><div class="img_cont_msg"><img src="https://riaayupramudita.id/wp-content/uploads/2024/08/user_image.jpeg" class="rounded-circle user_img_msg"></div></div>';
+               
+                document.getElementById("text").value = "";
+                document.getElementById("messageFormeight").insertAdjacentHTML('beforeend', userHtml);
+
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST", "/get", true);
+                xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        var botHtml = '<div class="card"><div class="img_cont_msg"><img src="https://riaayupramudita.id/wp-content/uploads/2024/08/chatbot_image.jpeg" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + xhr.responseText + '<span class="msg_time">' + str_time + '</span></div></div>';
+                        document.getElementById("messageFormeight").insertAdjacentHTML('beforeend', botHtml);
+                    }
+                };
+                xhr.send("msg=" + encodeURIComponent(rawText));
+
+                event.preventDefault();
             });
-        </script>
-       
-    </body>
+        });
+    </script>
+</body>
 </html>
