--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ body {
     border-radius: 25px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 320px;
+    width: 1000px;
 }
 
 .card {
@@ -66,22 +66,6 @@ body {
     margin-top: 15px;
 }
 
-button {
-    background-color: #ffccd2;
-    border: none;
-    border-radius: 25px;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: #ffffff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 10px;
-}
-
-button:hover {
-    background-color: #ffb3b9;
-}
-
 /* Additional styles for icons and UI elements */
 .icon {
     background-color: #ffffff;
@@ -95,8 +79,8 @@ button:hover {
 }
 
 .icon img {
-    width: 20px;
-    height: 20px;
+    width: 60px;
+    height: 60px;
 }
 
 .header {
@@ -119,12 +103,57 @@ button:hover {
 
 .footer {
     display: flex;
-    justify-content: space-between;
+    align-items: left;
     margin-top: 20px;
 }
 
 .footer-button {
-    width: 48%;
+    width: 95%;
     text-align: center;
 }
 
+.msg_container_send {
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 10px 15px;
+    margin-bottom: 5px;
+    position: relative;
+    color: #4a4a4a;
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: 15px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    font-size: 14px; /* Adjusted font size */
+    text-align: right;
+}
+
+.msg_time_send {
+    display: block;
+    font-size: 12px; /* Smaller font size */
+    color: #888888;  /* Greyish color */
+    margin-top: 5px;
+    text-align: right;
+}
+
+.msg_container {
+    background-color: #dcf8c6;
+    border-radius: 10px;
+    padding: 10px 15px;
+    margin-bottom: 5px;
+    position: relative;
+    color: #4a4a4a;
+    max-width: 70%;
+    margin-left: 15px;
+    margin-right: auto;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    font-size: 14px; /* Adjusted font size */
+    text-align: left;
+}
+
+.msg_time {
+    display: block;
+    font-size: 12px; /* Smaller font size */
+    color: #888888;  /* Greyish color */
+    margin-top: 5px;
+    text-align: left;
+}
