--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,14 +12,7 @@
             <div class="header-title">Chat with Your File</div>
             <div class="status">Online</div>
         </div>
-        <div class="card">
-            <div class="icon">
-                <!-- Replace with a local image if needed -->
-                <img src="https://riaayupramudita.id/wp-content/uploads/2024/08/chatbot_image.jpeg" alt="User Avatar">
-            </div>
-            <div class="title">File Chatbot</div>
-            <div class="subtitle">Ask me anything!</div>
-        </div>
+        
 
         <div id="messageFormeight" class="card">
             <!-- Messages will be appended here -->
@@ -27,11 +20,8 @@
 
         <div class="footer">
             <form id="messageArea" class="footer-button">
-                <input type="text" id="text" name="msg" class="message-box" placeholder="Type your message..." autocomplete="off" required />
+                <input type="text" id="text" name="msg" class="message-box" placeholder="Type your message, press Enter to send" autocomplete="off" required />
             </form>
-            <button type="submit" id="send" class="footer-button">
-                <img src="https://img.icons8.com/ios-filled/50/ffffff/paper-plane.png" alt="Send">
-            </button>
         </div>
     </div>
 
@@ -40,11 +30,11 @@
             document.getElementById("messageArea").addEventListener("submit", function(event) {
                 const date = new Date();
                 const hour = date.getHours();
-                const minute = date.getMinutes();
+                const minute = String(date.getMinutes()).padStart(2, '0');
                 const str_time = hour + ":" + minute;
                 var rawText = document.getElementById("text").value;
 
-                var userHtml = '<div class="card"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">' + str_time + '</span></div><div class="img_cont_msg"><img src="https://riaayupramudita.id/wp-content/uploads/2024/08/user_image.jpeg" class="rounded-circle user_img_msg"></div></div>';
+                var userHtml = '<div class="card"><div class="msg_container_send">' + rawText + '<span class="msg_time_send">' + str_time + '</span></div><div class="img_cont_msg"><img src="https://riaayupramudita.id/wp-content/uploads/2024/08/user_image.jpeg" class="rounded-circle user_img_msg"></div></div>';
                
                 document.getElementById("text").value = "";
                 document.getElementById("messageFormeight").insertAdjacentHTML('beforeend', userHtml);
@@ -54,7 +44,7 @@
                 xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState === 4 && xhr.status === 200) {
-                        var botHtml = '<div class="card"><div class="img_cont_msg"><img src="https://riaayupramudita.id/wp-content/uploads/2024/08/chatbot_image.jpeg" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + xhr.responseText + '<span class="msg_time">' + str_time + '</span></div></div>';
+                        var botHtml = '<div class="card"><div class="img_cont_msg"><img src="https://riaayupramudita.id/wp-content/uploads/2024/08/chatbot_image.jpeg" class="rounded-circle user_img_msg"></div><div class="msg_container">' + xhr.responseText + '<span class="msg_time">' + str_time + '</span></div></div>';
                         document.getElementById("messageFormeight").insertAdjacentHTML('beforeend', botHtml);
                     }
                 };
